source4/lib/messaging/messaging.c
@@ -663,7 +663,12 @@ struct imessaging_context *imessaging_client_init(TALLOC_CTX *mem_ctx,
 {
 	struct server_id id;
 	ZERO_STRUCT(id);
-	id.pid = generate_random() % 0x10000000;
+	id.pid = getpid();
+	id.task_id = generate_random();
+	id.vnn = NONCLUSTER_VNN;
+
+	/* This is because we are not in the s3 serverid database */
+	id.unique_id = SERVERID_UNIQUE_ID_NOT_TO_VERIFY;
 
 	return imessaging_init(mem_ctx, lp_ctx, id, ev, true);
 }
